@@ -1337,10 +1337,16 @@ legend {
 	text-align: left;
 }
 
+.formColumnOptional {
+	float: left;
+	display: table-column;
+	width: 5%;
+}
+
 .formColumnLeft {
 	float: left;
 	display: table-column;
-	width: 49%;
+	width: 44%;
 	text-align: left;
 	padding-left: 3px;
 }
@@ -1348,7 +1354,7 @@ legend {
 .formColumnRight {
 	float: left;
 	display: table-column;
-	width: 50%;
+	width: 45%;
 	text-align: left;
 }
 
@@ -1457,7 +1463,7 @@ legend {
 	.formColumnLeft {
 		float: left;
 		display: table-row;
-		width: 100%;
+		width: 90%;
 		text-align: left;
 	}
 
